<resources>
    <string name="app_name">The Paparazzi Plus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="your_name">Full Name</string>
    <string name="home_page">Home page</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="calender">Calender</string>
    <string name="contract">Contract</string>
    <!--    <string name="invoicecreation">Invoice Creation</string>-->
    <!--    <string name="invoicegeneration">Invoice Generation</string>-->
    <string name="project">Project</string>
    <string name="checklist">Checklist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_new_project">Create new Project</string>

    <string-array name="projectnames">
        <item>Create Project</item>
        <item>Update Project</item>
        <item>View Project</item>
    </string-array>

    <string-array name="checklistnames">
        <item>Create Checklist</item>
        <item>Update Checklist</item>
        <item>View Checklist</item>
    </string-array>
</resources>